[package]
name = "yash"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[lib]
path = "src/driver/lib.rs"
crate-type = ["cdylib"]

[profile.dev]
panic = "abort"
[profile.release]
panic = "abort"

[dependencies]
kernel-print = "0.1.0"
kernel-alloc = "0.1.0"
obfstr = "0.3.0"

[dependencies.winapi]
git = "https://github.com/Trantect/winapi-rs.git"
branch = "feature/km"
features = [
    "wdm",
    "ntstatus",
]

[build-dependencies]
winreg = "0.9.0"
failure = "0.1.8"